tweaking overflows on pdf containers to prevent scrollbars

--- a/src/styles/_includes/components/_modal.scss
+++ b/src/styles/_includes/components/_modal.scss
@@ -11,11 +11,16 @@
   align-items: center;
   display: none;
   justify-content: center;
+  overflow: hidden;
+  -ms-overflow-style: none;
+  // sass-lint:disable-all
+  scrollbar-width: none;
+  // sass-lint:enable-all
 
   &__container {
     padding-left: 11px;
     padding-right: 11px;
-    overflow-y: scroll;
+    overflow: hidden;
     height: 100%;
     display: flex;
     align-items: center;
@@ -33,6 +38,7 @@
     text-align: center;
     margin-left: auto;
     margin-right: auto;
+    overflow: hidden;
 
     // VARIATIONS
     &--close {
@@ -56,10 +62,16 @@
       text-align: center;
       box-shadow: none;
       min-width: 1px;
+      overflow: hidden;
     }
 
     &--outer {
       max-height: none;
+      overflow: hidden;
+    }
+
+    &--pdf {
+      overflow: hidden;
     }
   }
 
@@ -113,3 +125,9 @@
 .modal--open.tray--expanded .header {
   z-index: 11;
 }
+
+// sass-lint:disable-all
+.pdfobject-container {
+  overflow: hidden !important;
+}
+// sass-lint:enable-all
